--- a/index.html
+++ b/index.html
@@ -5,7 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Ajedrez</title>
-    <link rel="stylesheet" href="Ajedrez6.css">
+    <style>
+        body{
+    font-family: "Helveti", sans-serif !important;   
+    line-height: 1.5 !important; 
+    font-size: 20 px !important;
+    background-color: blanchedalmond !important;
+    color:black !important;
+    margin-left: 7px !important;
+    margin-right: 10px !important;
+    margin-top: 7px;
+    border: 3px groove black;
+    padding-left: 5px;
+}
+#tablero1, #tablero2
+{
+    border: 3px dashed grey;
+    margin-left: 5px;
+}
+
+#Cinco
+{
+    background-color: yellow !important;
+}
+
+.Subtitulos
+{
+    font-size: 1.7em !important;
+}
+.Importante
+{
+    font-weight: bold !important;
+}
+#Titulocentral
+{
+    text-align: center  !important;
+    font-size: 3em !important;
+
+}       
+th, td {
+    width: 0% !important;
+    vertical-align: top !important;
+    border: 3px solid #000 !important;
+    padding: 0.3em !important;
+    caption-side: bottom !important;
+}
+th {
+    text-align: center !important;
+}
+td {
+    text-align: left;
+    font-weight: bold;
+}
+#Cuatro table tbody td
+{
+    text-align: center !important;
+}
+#Cinco table tbody td
+{
+    text-align: center !important;
+}
+
+table{
+    border-collapse:collapse !important;
+}
+.card-body{
+    background-color: blanchedalmond !important;
+}
+.card{
+    border-bottom-color: black !important;
+}   
+#cartas{
+    height: 400px !important;
+    overflow: auto;
+    margin-right: 76%;
+    border: 3px dashed grey;
+    margin-left: 5px;
+    margin-bottom:5px ;
+}
+#Siete li:hover
+{
+    background-color: white;
+    font-weight: bold;
+}
+#Siete li{  
+    margin: 10px;
+}
+.Rojo
+{
+    color:red !important;
+}
+    </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
 <body>
